--- a/techweb-project/public/css/formutility.css
+++ b/techweb-project/public/css/formutility.css
@@ -6,7 +6,7 @@
   }
   
   .card {
-    background-color:lightgreen;
+    background-color: #9bdc28;
     color: #333;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
